# gold_digger

./: .actrc  .checkov.yml  .editorconfig  .editorconfig-checker.json  .gitignore  .gitleaks.toml  .goodcheck.yml  .grype.yaml  .markdownlint-cli2.jsonc  .markdownlint.json  .mdformat.toml  .mega-linter.yml  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secretlintrc.json  .sqlfluff  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  GEMINI.md  LICENSE  README.md  SECURITY.md  TLS_TESTS_ANALYSIS.md  WARP.md  debug_parse.rs  deny.ci.toml  deny.toml  dist-workspace.toml  justfile  package-lock.json  package.json  renovate.json  runner-analysis.md
.chglog/: CHANGELOG.tpl.md  config.yml
.cursor/: settings.json
.cursor/rules/: rust-best-practices.mdc
.cursor/rules/project/: core-concepts.mdc
.github/: ISSUE_TEMPLATE.md  act-test-scenarios.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  security_report.yml
.github/scripts/: test-error-reporting.sh
.github/workflows/: audit.yml  autofix.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  docs.yml  release.yml  security.yml  tls-integration.yml
.kiro/hooks/: ai-instructions-sync.kiro.hook  manual-checks.kiro.hook  manual-ci-check.kiro.hook  rust-docs-sync.kiro.hook
.kiro/specs/documentation-setup/: design.md  requirements.md
.kiro/specs/gold-digger/: design.md  requirements.md  tasks.md
.kiro/specs/integration-testing-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/ltsv-export-support/: design.md  requirements.md  tasks.md
.kiro/specs/tls-rustls-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: pipeline.md  product.md  rust-best-practices.md  structure.md  tech.md
.kiro/steering/project/: core-concepts.md
docs/: book.toml  whichlang.css
docs/src/: SUMMARY.md  introduction.md
docs/src/development/: api-reference.md  cargo-dist-completion-summary.md  contributing.md  integration-testing.md  release-notes-template.md  release-runbook.md  setup.md  tls-variants.md
docs/src/installation/: linux.md  (+2 more)
project_spec/: requirements.md
src/: cli.rs  csv.rs  exit.rs  json.rs  lib.rs  main.rs  tls.rs  utils.rs
tests/: README.md  TLS_VARIANTS_USAGE.md  cli_testing_example.rs  container_setup_test.rs  database_seeding_test.rs  dependency_validation.rs  end_to_end_type_conversion.rs  integration_basic.rs  integration_tests.rs  lib.rs  minimal_seed_test.rs  mod.rs  test_execution_utilities.rs  test_seed_data.rs  tls_backward_compatibility.rs  tls_cli_integration.rs  tls_config_unit_tests.rs  tls_integration.rs  tls_integration_old.rs  tls_variants_test.rs  type_conversion_exit_codes.rs  type_safety.rs
tests/fixtures/: mod.rs  schema.sql  seed_data.sql
tests/integration/: common.rs  containers.rs  mod.rs  tls_tests.rs
tests/snapshots/: cli_testing_example__help_output.snap  tls_backward_compatibility__integration_compatibility_tests__cli_help_output.snap  tls_cli_integration__ssl_disabled_cli_tests__help_without_ssl_feature.snap
tests/test_support/: cli.rs  containers.rs  fixtures.rs  mod.rs  parsing.rs
wix/: main.wxs
(+31 files in other folders)
