[package]
name = "gold_digger"
version = "0.2.6"
edition = "2024"
rust-version = "1.89.0"
authors = ["UncleSp1d3r <unclesp1d3r@evilbitlabs.io>"]
description = "A simple MySQL/MariaDB query tool that accepts parameters as environmental variables."
readme = "README.md"
repository = "https://github.com/EvilBit-Labs/gold_digger"
homepage = "https://evilbitlabs.io/gold_digger/"
license = "MIT"
keywords = ["mysql", "query", "tool", "mariadb"]
categories = ["command-line-utilities", "database"]

exclude = [
  ".github/",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  ".editorconfig",
  ".gitignore",
  ".gitlint",
  ".chglog/",
  "WARP.md",
  "GEMINI.md",
  "AGENTS.md",
]

[package.metadata.wix]
upgrade-guid = "1193C717-3A21-4D74-B2FB-D840FC3ECC66"
path-guid = "7641C7C8-5EB9-4BCF-8317-8A21B53B2997"
license = false
eula = false

[package.metadata.cargo-machete]
ignored = ["mysql_common", "rustls-native-certs"]

[dependencies]
mysql = { version = "26.0.1", default-features = false, features = ["rustls-tls", "minimal"] }
anyhow = "1.0.99"
csv = "1.3.1"
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive", "env"] }
clap_complete = "4.5.57"
mysql_common = { version = "0.35.5", optional = true }
thiserror = "2.0.16"
url = "2.5.7"
# TLS dependencies
rustls = { version = "0.23.31", features = ["ring"] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
regex = "1.11.1"


[dev-dependencies]
testcontainers-modules = { version = "0.13.0", features = ["mariadb", "mysql", "blocking"] }
tempfile = "3.21.0"
assert_cmd = "2.0.17"
predicates = "3.1.2"
process_control = "5.2.0"
insta = "1.43.1"
temp-env = "0.3.6"
regex = "1.11.2"
rustls = { version = "0.23.31", features = ["ring"] }
serde_json = "1.0.143"
rcgen = "0.14.3"
time = { version = "0.3.43", features = ["macros"] }
walkdir = "2.5.0"
sysinfo = "0.37.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
debug-assertions = false
strip = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"  # Use fat LTO for maximum performance optimization in distribution builds

[features]
default = ["json", "csv", "additional_mysql_types", "verbose"]

# Output format support
json = []  # Enable JSON output format with deterministic field ordering
csv = []   # Enable CSV output format with RFC4180 compliance

# Extended MySQL type support for complex data types
additional_mysql_types = [
  "mysql_common",                    # Base MySQL type extensions
  "mysql_common?/bigdecimal",        # High-precision decimal arithmetic
  "mysql_common?/rust_decimal",      # Fixed-point decimal types
  "mysql_common?/time",              # Enhanced date/time handling
  "mysql_common?/frunk",             # Generic programming utilities
]

# Development and debugging support
verbose = []  # Enable detailed logging and diagnostic output

# Integration testing support
integration_tests = []  # Enable heavy integration tests requiring external databases

# TLS is always enabled with rustls - no feature flags needed
